[package]
name = "veye_checker"
version = "0.1.0"
authors = ["timgluz <sulg@versioneye.com>", "reiz@versioneye.com"]

[dependencies]
sha1            = "^0.2.0"
sha2            = "^0.4.2"
base64          = "^0.3.0"
md5             = "^0.3"
getopts         = "^0.2"
hyper           = "^0.10"
rustc-serialize = "^0.3"
hyper-native-tls = "0.2.2"
csv             = "^0.15"
regex           = "^0.2.1"
serde           = "^0.9.1"
serde_derive    = "^0.9.1"
toml            = "^0.3.1"
walkdir         = "^1.0"

[dev-dependencies]
log = "*"

[features]
api = []
proxy = []

